<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/layout_main_name"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:background="@drawable/bg_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:ignore="RtlSymmetry"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextPalindrome"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/bg_custom"
        android:hint="@string/layout_main_palindrome"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="140dp"
        android:layout_height="129dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_photo" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_custom"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/layout_main_button_check"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPalindrome"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/layout_main_button_next"
        android:backgroundTint="@color/dark_blue"
        android:background="@drawable/btn_custom"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>